--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -1,13 +1,12 @@
 ---
 // Assets Imports - Info
-import { contacts } from '../../constants/index'
+import { contacts } from '@/constants/index'
 
 // Assets Imoports - Icons & buttons
 import { Instagram, MapPin, Mail, Phone, Rss } from 'lucide-react'
-import { buttonVariants } from '../ui/button'
 
 // Translation Imports
-import { getLangFromUrl } from '../../i18n/utils'
+import { getLangFromUrl } from '@/i18n/utils'
 const lang = getLangFromUrl(Astro.url)
 ---
 
