--- a/src/components/Faqs.astro
+++ b/src/components/Faqs.astro
@@ -1,35 +1,33 @@
 ---
 // Assets Imports - Info & Icon
-import { faqs } from '../constants/index'
+import { faqs } from '@/constants/index'
 import { ChevronDown } from 'lucide-react'
 
 // Atro Imports - Components
 import Header from './layout/Header.astro'
 
 // Translation Imports
-import { getLangFromUrl, useTranslations } from '../i18n/utils'
+import { getLangFromUrl, useTranslations } from '@/i18n/utils'
 const lang = getLangFromUrl(Astro.url)
 const t = useTranslations(lang)
 ---
 
 <section
-  class="flex flex-col items-center justify-center gap-10 py-10 md:py-16"
-  id="faq"
->
-  <hr class="h-2 w-full" />
+  class='flex flex-col items-center justify-center gap-10 py-10 md:py-16'
+  id='faq'>
+  <hr class='h-2 w-full' />
   <Header title={t('faq-title')} subtitle={t('faq-subtitle')} />
   <div
-    class="flex w-full max-w-[1680px] flex-col items-center justify-center px-10 md:px-20"
-  >
+    class='flex w-full max-w-[1680px] flex-col items-center justify-center px-10 md:px-20'>
     <!-- Frequently Asked Questions Lists -->
     {
       faqs.map((item) => (
-        <details class="w-full border-b" id="details">
-          <summary class="flex flex-1 items-center justify-between py-4 font-medium hover:underline">
+        <details class='w-full border-b' id='details'>
+          <summary class='flex flex-1 items-center justify-between py-4 font-medium hover:underline'>
             {item.title[lang]}
-            <ChevronDown className="h-4 w-4 shrink-0" />
+            <ChevronDown className='h-4 w-4 shrink-0' />
           </summary>
-          <div class="py-5">{item.text[lang]}</div>
+          <div class='py-5'>{item.text[lang]}</div>
         </details>
       ))
     }
