--- a/src/components/TestimonioCard.astro
+++ b/src/components/TestimonioCard.astro
@@ -13,7 +13,7 @@ type Props = {
 }
 
 // Translation Imports
-import { getLangFromUrl } from '../i18n/utils'
+import { getLangFromUrl } from '@/i18n/utils'
 const lang = getLangFromUrl(Astro.url)
 
 // Astro Props
@@ -21,13 +21,12 @@ const { name, image, review } = Astro.props
 ---
 
 <div
-  class="col-span-1 rounded-lg border bg-card text-card-foreground shadow-sm"
->
-  <div class="flex items-center justify-between p-6">
-    <h3 class="text-2xl font-semibold leading-none tracking-tight">
+  class='col-span-1 rounded-lg border bg-card text-card-foreground shadow-sm'>
+  <div class='flex items-center justify-between p-6'>
+    <h3 class='text-2xl font-semibold leading-none tracking-tight'>
       {name}
     </h3>
     <Image src={image} alt={`Foto de perfil de ${name}`} />
   </div>
-  <p class="p-6 pt-0">{review[lang]}</p>
+  <p class='p-6 pt-0'>{review[lang]}</p>
 </div>
