--- a/src/components/Testimonios.astro
+++ b/src/components/Testimonios.astro
@@ -1,24 +1,23 @@
 ---
 // Assets Imports - Info
-import { testimonios } from '../constants/index'
+import { testimonios } from '@/constants/index'
 
 // Atro Imports - Components
 import Header from './layout/Header.astro'
 import TestimonioCard from './TestimonioCard.astro'
 
 // Translation Imports
-import { getLangFromUrl, useTranslations } from '../i18n/utils'
+import { getLangFromUrl, useTranslations } from '@/i18n/utils'
 const lang = getLangFromUrl(Astro.url)
 const t = useTranslations(lang)
 ---
 
 <section
-  class="flex flex-col items-center gap-10 bg-gradient-to-t from-background to-primary/10 pb-10 pt-8 dark:to-primary/5"
-  id="testimonios"
->
+  class='flex flex-col items-center gap-10 bg-gradient-to-t from-background to-primary/10 pb-10 pt-8 dark:to-primary/5'
+  id='testimonios'>
   <Header title={t('testimonial-title')} subtitle={t('testimonial-subtitle')} />
   <!-- Main Testimonio List -->
-  <div class="grid max-w-[1680px] grid-cols-1 gap-5 px-10 md:grid-cols-3">
+  <div class='grid max-w-[1680px] grid-cols-1 gap-5 px-10 md:grid-cols-3'>
     {
       testimonios
         .slice(0, 3)
@@ -26,7 +25,7 @@ const t = useTranslations(lang)
     }
   </div>
   <!-- Secondary Testimonio List, hidden in mobile -->
-  <div class="hidden max-w-[1680px] grid-cols-3 gap-5 px-10 md:grid">
+  <div class='hidden max-w-[1680px] grid-cols-3 gap-5 px-10 md:grid'>
     {
       testimonios
         .slice(3, 6)
@@ -34,13 +33,13 @@ const t = useTranslations(lang)
     }
   </div>
   <!-- Google Maps reviwes link -->
-  <div class="mt-5 flex w-full animate-pulse justify-end px-10 text-accent">
+  <div class='mt-5 flex w-full animate-pulse justify-end px-10 text-accent'>
     <a
-      title="Testimonial-links"
-      class="transition-colors duration-200 hover:text-accent/80"
-      href="https://www.google.es/maps/place/Nano+Fighters+Club/@36.6994397,-4.4383405,17z/data=!3m1!4b1!4m6!3m5!1s0xd72f90703cb3159:0xef91fba1a80a4a3a!8m2!3d36.6994354!4d-4.4357656!16s%2Fg%2F11sj9ml9pp?hl=es&entry=ttu"
-      rel="noreferrer noopener"
-      target="_blank">{t('testimonial-link')}</a
+      title='Testimonial-links'
+      class='transition-colors duration-200 hover:text-accent/80'
+      href='https://www.google.es/maps/place/Nano+Fighters+Club/@36.6994397,-4.4383405,17z/data=!3m1!4b1!4m6!3m5!1s0xd72f90703cb3159:0xef91fba1a80a4a3a!8m2!3d36.6994354!4d-4.4357656!16s%2Fg%2F11sj9ml9pp?hl=es&entry=ttu'
+      rel='noreferrer noopener'
+      target='_blank'>{t('testimonial-link')}</a
     >
   </div>
 </section>
