--- a/src/pages/en/[category]/[...page].astro
+++ b/src/pages/en/[category]/[...page].astro
@@ -1,19 +1,20 @@
 ---
 // import Astro - Components
-import BaseLayout from '../../../layouts/BaseLayout.astro'
-import BlogCard from '../../../components/blog/BlogCard.astro'
-import BlogHeader from '../../../components/blog/BlogHeader.astro'
+import BaseLayout from '@/layouts/BaseLayout.astro'
+import BlogCard from '@/components/blog/BlogCard.astro'
+import BlogHeader from '@/components/blog/BlogHeader.astro'
 import { type CollectionEntry } from 'astro:content'
+import type { Page } from 'astro'
 
 // Import Utils
-import { getCategories, getPosts } from '../../../lib/fetchers'
-import { capitalizer } from '../../../lib/utils'
+import { getCategories, getPosts } from '@/lib/fetchers'
+import { capitalizer } from '@/lib/utils'
 
 // Function to create the path for all the categories of the blog
-export async function getStaticPaths({ paginate }) {
+export async function getStaticPaths({ paginate }: any) {
   const categories = await getCategories('en')
   // Get all Posts
-  const posts: CollectionEntry<'blog'> = await getPosts('en')
+  const posts: CollectionEntry<'blog'>[] = await getPosts('en')
 
   return categories.flatMap((category) => {
     const postByCategories = posts
@@ -25,6 +26,10 @@ export async function getStaticPaths({ paginate }) {
       pageSize: 9,
     })
   })
+}
+
+interface Props {
+  page: Page<CollectionEntry<'blog'>>
 }
 
 const { page } = Astro.props
@@ -44,20 +49,18 @@ export const prerender = true
 
 <BaseLayout
   title={`NFC Blog - ${capitalizer(params.category)}`}
-  description=`Articulos actualizados sobre bienestar, deportes de combate y ${params.category}`
->
-  <section class="mx-auto max-w-[1680px] px-5">
-    <h1 class="sr-only hidden">
+  description=`Articulos actualizados sobre bienestar, deportes de combate y ${params.category}`>
+  <section class='mx-auto max-w-[1680px] px-5'>
+    <h1 class='sr-only hidden'>
       Articulos actualizados sobre bienestar, deportes de combate y ${}
     </h1>
-    <BlogHeader title="NFC Blog" subtitle="Deleitate con los articulos de" />
+    <BlogHeader title='NFC Blog' subtitle='Deleitate con los articulos de' />
     <!-- Posts Card List -->
     <div
-      class="lg:gap mb-5 grid grid-cols-1 gap-x-6 gap-y-9 px-5 md:grid-cols-2 md:gap-y-11 md:px-0 lg:grid-cols-3 lg:gap-x-8"
-    >
+      class='lg:gap mb-5 grid grid-cols-1 gap-x-6 gap-y-9 px-5 md:grid-cols-2 md:gap-y-11 md:px-0 lg:grid-cols-3 lg:gap-x-8'>
       {page.data.map((post) => <BlogCard post={post} />)}
     </div>
-    <div class="flex h-16 w-full items-center justify-center space-x-5">
+    <div class='flex h-16 w-full items-center justify-center space-x-5'>
       {page.url.prev ? <a href={page.url.prev}>{`< Previous`}</a> : null}
       {page.url.next ? <a href={page.url.next}>{`Next >`}</a> : null}
     </div>
