--- a/src/pages/es/blog/[...page].astro
+++ b/src/pages/es/blog/[...page].astro
@@ -1,40 +1,42 @@
 ---
 // import Astro - Components & Globals
-import BaseLayout from '../../../layouts/BaseLayout.astro'
-import BlogCard from '../../../components/blog/BlogCard.astro'
-import BlogHeader from '../../../components/blog/BlogHeader.astro'
+import BaseLayout from '@/layouts/BaseLayout.astro'
+import BlogCard from '@/components/blog/BlogCard.astro'
+import BlogHeader from '@/components/blog/BlogHeader.astro'
 import { type CollectionEntry } from 'astro:content'
-import { type Page } from '../../../types'
+import { type Page } from '@/types'
 
 // Import Utils
-import { getPosts } from '../../../lib/fetchers'
+import { getPosts } from '@/lib/fetchers'
 
-export async function getStaticPaths({ paginate }) {
+export async function getStaticPaths({ paginate }: any) {
   // Get all Posts
-  const posts: CollectionEntry<'blog'> = await getPosts('es')
+  const posts: CollectionEntry<'blog'>[] = await getPosts('es')
 
   return paginate(posts, { pageSize: 9 })
 }
 
-const { page }: { page: Page<CollectionEntry<'blog'>> } = Astro.props
+interface Props {
+  page: Page<CollectionEntry<'blog'>>
+}
+
+const { page } = Astro.props
 
 // create static page instead of SSR
 export const prerender = true
 ---
 
 <BaseLayout
-  title="NFC Blog"
-  description="Articulos actualizados sobre bienestar, deportes de combate y mucho mas"
->
-  <section class="mx-auto max-w-[1680px] px-5">
-    <BlogHeader title="NFC Blog" subtitle="Deleitate con los articulos de" />
+  title='NFC Blog'
+  description='Articulos actualizados sobre bienestar, deportes de combate y mucho mas'>
+  <section class='mx-auto max-w-[1680px] px-5'>
+    <BlogHeader title='NFC Blog' subtitle='Deleitate con los articulos de' />
     <!-- Posts card Lists -->
     <div
-      class="lg:gap mb-5 grid grid-cols-1 gap-x-6 gap-y-9 px-5 md:grid-cols-2 md:gap-y-11 md:px-0 lg:grid-cols-3 lg:gap-x-8"
-    >
+      class='lg:gap mb-5 grid grid-cols-1 gap-x-6 gap-y-9 px-5 md:grid-cols-2 md:gap-y-11 md:px-0 lg:grid-cols-3 lg:gap-x-8'>
       {page.data.map((post) => <BlogCard post={post} />)}
     </div>
-    <div class="flex h-16 w-full items-center justify-center">
+    <div class='flex h-16 w-full items-center justify-center'>
       {page.url.prev ? <a href={page.url.prev}>{`< Anterior`}</a> : null}
       {page.url.next ? <a href={page.url.next}>{`Siguiente >`}</a> : null}
     </div>
