--- a/src/pages/es/index.astro
+++ b/src/pages/es/index.astro
@@ -1,13 +1,13 @@
 ---
 // Astro Imports - Components
-import BaseLayout from '../../layouts/BaseLayout.astro'
-import Hero from '../../components/Hero.astro'
-import About from '../../components/About.astro'
-import Entrenamientos from '../../components/Entrenamientos.astro'
-import Testimonios from '../../components/Testimonios.astro'
-import Faqs from '../../components/Faqs.astro'
-import Feed from '../../components/Feed.astro'
-import ShopToast from '../../components/react/ShopToast'
+import BaseLayout from '@/layouts/BaseLayout.astro'
+import Hero from '@/components/Hero.astro'
+import About from '@/components/About.astro'
+import Entrenamientos from '@/components/Entrenamientos.astro'
+import Testimonios from '@/components/Testimonios.astro'
+import Faqs from '@/components/Faqs.astro'
+import Feed from '@/components/Feed.astro'
+import ShopToast from '@/components/react/ShopToast'
 
 // create static page instead of SSR
 export const prerender = true
