--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -4,6 +4,8 @@ import { getLangFromUrl, useTranslations } from '@/i18n/utils'
 
 // Assets Imports - Images
 import boxingGloves from '@/assets/boxingGloves.webp'
+import GoogleLogo from '@/assets/unnamed.webp'
+import { Star } from 'lucide-react'
 
 // Astro Imports - Globals
 import { Image } from 'astro:assets'
@@ -25,6 +27,18 @@ const t = useTranslations(lang)
     <p class='max-w-[700px] text-lg text-muted-foreground'>
       {t('hero-description')}
     </p>
+     <div class="flex gap-2">
+      <Image src={GoogleLogo} alt='Logo de Google' loading='eager' width={25} height={20} />
+      <span>5.0</span>
+      <span class="flex">
+        {Array.from({ length: 5 }, (_, i) => (
+          <Star key={i} strokeWidth={0.3} fill="#FFC107" />
+        ))}
+      </span>
+      <a  href='https://www.google.es/maps/place/Nano+Fighters+Club/@36.6994397,-4.4383405,17z/data=!3m1!4b1!4m6!3m5!1s0xd72f90703cb3159:0xef91fba1a80a4a3a!8m2!3d36.6994354!4d-4.4357656!16s%2Fg%2F11sj9ml9pp?hl=es&entry=ttu'
+      rel='noreferrer noopener'
+      target='_blank' class="underline hover:text-gray-400 duration-150 transition-colors">39 reviews</a>
+    </div>
     <div class='mt-3 flex items-center justify-center gap-5'>
       <FormDialog client:visible text={t('dialog-text')} lang={lang} />
       <a
