--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,25 +1,25 @@
 ---
 // Astro Imports - Components & Globas
-import HeadSEO from '@/components/layout/HeadSEO.astro'
-import Footer from '@/components/layout/Footer.astro'
-import Navbar from '@/components/layout/Navbar.astro'
-import { type CollectionEntry } from 'astro:content'
+import HeadSEO from "@/components/layout/HeadSEO.astro";
+import Footer from "@/components/layout/Footer.astro";
+import Navbar from "@/components/layout/Navbar.astro";
+import type { CollectionEntry } from "astro:content";
 
 // Props imterface
 interface Props {
-  title?: string | undefined
-  description?: string | undefined
-  ogImage?: string | undefined
-  url?: URL | undefined
-  post?: CollectionEntry<'blog'>
+	title?: string | undefined;
+	description?: string | undefined;
+	ogImage?: string | undefined;
+	url?: URL | undefined;
+	post?: CollectionEntry<"blog">;
 }
 
 // Astro Props
-const { title, description, ogImage, url, post } = Astro.props
+const { title, description, ogImage, url, post } = Astro.props;
 
 // Translation Imports
-import { getLangFromUrl } from '../i18n/utils'
-const lang = getLangFromUrl(Astro.url)
+import { getLangFromUrl } from "../i18n/utils";
+const lang = getLangFromUrl(Astro.url);
 ---
 
 <html lang={lang}>
